# XSS_detector

./: .gitignore  CSS_pytorch.ipynb  README.md  XSS_dataset.csv  oracle_tools.py  probably_escape_string.txt  prompt.txt  pyproject.toml  requirements.txt  serve_backend.sh
app/: config.py  main.py
app/controllers/: endpoint_controller.py
app/exceptions/: xss_exception.py
app/payload_validators/: dummy_detector.py
app/payload_validators/interfaces/: abstract_xss_detector.py  (+2 more)
app/request_models/: basic_request.py
app/services/: payload_service.py
app/templates/: basic_response.html
cve_test_1/: test.py
penetration_test_normal/: test.py  test_href.html  test_onerror.html
res/: TFIDF_top3000.txt  cve_llm_output.txt  llm_output.txt  model_word.txt  success_payloads.txt  word2vec.model
res/all_payloads/: href.txt  innerHTML.txt  onerror.txt
res/llm_output/: llm_output.txt  llm_output_05032036.txt  llm_output_05032056.txt  llm_output_05032142.txt  llm_output_05110132.txt  llm_output_05110133.txt  llm_output_05110202.txt  llm_output_05110210.txt  llm_output_05110218.txt  llm_output_05110230.txt  llm_output_05111747.txt  llm_output_06090036.txt  result.txt
res/model/: xss_dataset_evo1.csv
res/success/: success_payloads.txt  success_payloads_05110202.txt  success_payloads_05110210.txt  success_payloads_05110218.txt  success_payloads_05110230.txt  success_payloads_05111747.txt  success_payloads_06090036.txt
src/: CNN_pytorch.ipynb  CNN_pytorch.py  CNN_pytorch_test.ipynb  CSS_pytorch.ipynb  CSS_pytorch_test.ipynb  auto_payload.py  llm.py  llm1.py  payload_test.py  test.py
src/penetration_test_cve/: test.py
src/penetration_test_normal/: __init__.py  test.py  test_innerHTML.html  test_onerror.html
test/: test.html  test.py
(+1 files in other folders)
